--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   padding-top: 0px;
   max-width: 100%;
   width: 100%;
+  min-width:1200px;
 }
 .wrapper { display: block; border: 0px #a2a2a2 solid; width:100%; min-height: 100%; height: 100%; margin:0px auto; }
 #header { overflow: hidden; color: #166436; font-family: 'Raleway', sans-serif; width: 100%; height: 400px; border: 0px #a2a2a2 solid; }
@@ -44,8 +45,8 @@ list-style-type: none; list-style-image: none; }
 .nav li {display: inline; padding: 7px; }
 #nav ul li a {color: purple;
 background: yellow; }
-#content { padding-top: 20px; padding-left: 50px; min-height: 80%; width: 550px; border: 0px #a2a2a2 solid; float: left; }
-#content-single { padding-top: 20px; padding-left: 50px; min-height: 80%; width: 550px; border: 0px #a2a2a2 solid; float: left; }
+#content { margin-top:-50px; padding-top: 20px; padding-left: 50px; min-height: 80%; width: 550px; border: 0px #a2a2a2 solid; float: left; }
+#content-single { padding-top: 20px; padding-left: 50px; padding-bottom: 100px; min-height: 80%; width: 550px; border: 0px #a2a2a2 solid; float: left; }
 
 .news {
   height: 100px;
@@ -60,9 +61,11 @@ background: yellow; }
 h2 {
   padding-left: 15px;
 }
-#middlebar { overflow-y: hidden; padding-top: 25px; width: 325px; float: left; }
-#sidebar { margin-top: 25px; width: 325px; border: 1px solid #166436; float: left; }
-.sidebar-header {
+#main { min-width: 1200px; width:100%;}
+#sidebar { margin-top:-39px; overflow-y: hidden; padding-top: 25px; width: 300px; float: right; }
+.leftbar-1 { margin-top: 25px; margin-left: -25px; width: 325px; background-color: antiquewhite; float: left; }
+.leftbar-2 { margin-top: 375px; margin-left: -325px; width: 325px; background-color: antiquewhite; float: left; }
+.leftbar-header {
   background-color: #166436;
   color: #FFFFFF;
   font-size: 20px;
